[tool.poetry]
name = "raggy"
version = "0.1.0"
description = ""
authors = ["Naufal Indriatmoko <naufal.data101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
chainlit = "1.0.101"
langchain = "0.1.0"
langchain_openai = "0.0.2.post1"
langchain_community = "0.0.12"
langchain_core = "0.1.10"
unstructured = "0.12.4"
sentence-transformers = "2.3.1"
chromadb = "0.4.22"
beautifulsoup4 = "4.12.3"
dataclasses_json = "0.5.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
